--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -22,8 +22,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    // JUnit 5
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 
     compile 'xyz.tehbrian.restrictionhelper:core:0.2.0'
 
