--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,8 +12,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    // JUnit 5
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
 }
